--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+	<servlet>
+		<servlet-name>trainSearch</servlet-name>
+		<servlet-class>com.nisum.trainReservation.TrainSearch</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>trainSearch</servlet-name>
+		<url-pattern>/Search</url-pattern>
+	</servlet-mapping>
 </web-app>
